tests/error/misc_errors/not_a_function_def.py
from guppylang.decorator import guppy


f = lambda x: x
f = guppy(f)

guppy.compile(f)
