tests/error/misc_errors/not_a_function_def.err
Error: Expected a function definition (at $FILE:4:0)
  | 
2 | 
3 | 
4 | f = lambda x: x
  | ^^^^^^^^^^^^^^^ Expected a function definition

Guppy compilation failed due to 1 previous error
